<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">sNotz</string>
    <string name="about">About</string>
    <string name="add_new">Add New</string>
    <string name="add_text_hint">Add text here…</string>
    <string name="app_name_summary" translatable="false">An open-source, privacy-friendly, and completely offline application to manage notes</string>
    <string name="activated">activated</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_error">Authentication Error: %s</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="auto_save">Auto Save Notes</string>
    <string name="auto_save_summary">Automatically save notes on exiting page</string>
    <string name="az_order">A-Z Order</string>
    <string name="billing_client_disconnected">Failed to connect with Google Play Billing client</string>
    <string name="biometric_lock">Biometric Lock</string>
    <string name="biometric_lock_status">Biometric authentication is %s</string>
    <string name="biometric_lock_summary">Use biometric authentication to secure sNotz</string>
    <string name="backup">Backup</string>
    <string name="backup_checklist_message">Selected checklist is backed up as \'%s\'</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="backup_notes_hint">Backup Notes As?</string>
    <string name="backup_notes_message">Your notes are backed up as \'%s\'</string>
    <string name="backup_notes_summary">Backup your notes into \'sdcard\'</string>
    <string name="backup_notes_warning">A previous backup file with same name already exists. Do you want to replace it?</string>
    <string name="backup_snotz">As sNotz Backup</string>
    <string name="bottom_fab_click_message">Click bottom \'Plus\' icon to create a note</string>
    <string name="change_name">Change Name</string>
    <string name="check_lists">Checklists</string>
    <string name="check_list_backup_question">Backup \'%s\' as?</string>
    <string name="check_list_create_question">Create new checklist as?</string>
    <string name="check_list_main_title">My Checklists</string>
    <string name="check_list_name_empty_message">Checklist name shouldn\'t be empty. Aborting</string>
    <string name="check_list_import_question">Import selected checklist as?</string>
    <string name="check_list_exist_warning">A checklist with same name already exists. Do you want to replace it?</string>
    <string name="check_list_widget_color">Checklist Widget Color</string>
    <string name="check_list_widget_color_summary">Choose default color for Checklist Widgets</string>
    <string name="change_logs">Change-logs</string>
    <string name="clear_notes">Clear Notes</string>
    <string name="clear_notes_message">Please note. All the notes will be deleted</string>
    <string name="clear_notes_summary">Delete all the notes from sNotz</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_color_message">Please Note: The new \'%s\' will be only applied to new notes.</string>
    <string name="color_accent">Accent Color</string>
    <string name="color_accent_summary">Choose default Accent Color of sNotz</string>
    <string name="color_select_dialog">Choose default %s of the notes</string>
    <string name="content_hint">Add content here…</string>
    <string name="create">Create</string>
    <string name="created_order">Date Created</string>
    <string name="customize_colors">Customize Colors</string>
    <string name="customize_note">Note Customizations</string>
    <string name="deactivated">deactivated</string>
    <string name="delete">Delete</string>
    <string name="delete_sure_question">Delete %s?</string>
    <string name="developed_by">Made with \u2665 by</string>
    <string name="discard">Discard</string>
    <string name="discard_note">Discard changes made on this page?</string>
    <string name="donations">Donations</string>
    <string name="donation_app">Buy Donation App</string>
    <string name="donations_summary">Support the development with a donation</string>
    <string name="duplicate">Duplicate</string>
    <string name="exit">Exit</string>
    <string name="faq">FAQ</string>
    <string name="faq_summary">Read frequently asked questions</string>
    <string name="file_path_error">Failed to get file path from external File Manager</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_summary">Current size: %ssp</string>
    <string name="go_ahead">Go Ahead</string>
    <string name="hide">Hide</string>
    <string name="hidden_note">Hidden Note</string>
    <string name="hidden_note_message">Visit \'Settings\' page to change the visibility of hidden notes</string>
    <string name="image_add">Add Image</string>
    <string name="image_add_warning">Please Note: Adding notes containing images might affects the performance of sNotz.</string>
    <string name="image_excluded_warning">Please Note: Images will be excluded.</string>
    <string name="image_include">Allow Images</string>
    <string name="image_include_summary">Allow including an image with notes</string>
    <string name="image_remove">Remove Image</string>
    <string name="image_replace">Replace Image</string>
    <string name="import_item">Import</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_Summary">Invite your friends to try sNotz</string>
    <string name="long_click_note_message">Long click a note for advanced options, such as \'share\', \'hide\' &amp; \'delete\'</string>
    <string name="misc">Miscellaneous</string>
    <string name="modify">Modify</string>
    <string name="more_apps">More Apps</string>
    <string name="note_color_background">Background Color</string>
    <string name="note_color_text">Text Color</string>
    <string name="note_color_random">Random Colors</string>
    <string name="note_color_random_message">Please disable \'Random Colors\' to use this feature</string>
    <string name="note_color_random_summary">Randomly apply colors when creating new notes</string>
    <string name="note_editor">Note Editor</string>
    <string name="note_list_empty">You haven\'t create any notes yet</string>
    <string name="notes_in_row">Notes in a Row</string>
    <string name="notes_in_row_default">Default</string>
    <string name="notes_in_row_summary">%s note</string>
    <string name="ok">OK</string>
    <string name="permission_denied_message">Permission denied for accessing device storage</string>
    <string name="permission_notification_message">Inorder to work this feature on devices running android TIRAMISU or newer versions, it is necessary to have permission to post notifications granted by the user. If you like to have this feature working on sNotz, please go ahead with requesting (and granting) the permission by clicking the button provided below.</string>
    <string name="permission_request">Request Permission</string>
    <string name="pin_enter">Enter PIN</string>
    <string name="pin_reenter">Renter PIN</string>
    <string name="pin_mismatch_message">PIN doesn\'t match. Please try again</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_status">PIN Protection is %s</string>
    <string name="pin_protection_message">Use a 4 digit PIN to secure sNotz</string>
    <string name="press_back_exit">Press the \'Back\' button again to Exit</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_error_message">Failed to acquire data from QR Code</string>
    <string name="qr_code_generate">Generate QR Code</string>
    <string name="qr_code_generate_error_message">Failed to generate QR Code</string>
    <string name="qr_code_read">Read from Image</string>
    <string name="qr_code_save_hint">Save QR Image as?</string>
    <string name="qr_code_scan">Scan QR Code</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_Summary">Rate or/and Review sNotz in PlayStore</string>
    <string name="reading_mode_message">Restart this note in read-only mode?</string>
    <string name="reading_mode_warning">Warning: Please save this note before continuing. Recent changes will be otherwise ignored.</string>
    <string name="reminder_manage">Manage Reminder</string>
    <string name="reminder_message">sNotz will remind you about this note at %s</string>
    <string name="reminder_invalid_message">%s is already passed. Aborting…</string>
    <string name="reminder_set">Set Reminder</string>
    <string name="replace">Replace</string>
    <string name="report_issue">Report an Issue</string>
    <string name="restore">Restore</string>
    <string name="restore_backup_message">Your notes were recently removed. Do you want to restore it from the last auto-backup?\n\nWarning: Auto-backup will be permanently removed after canceling this message.</string>
    <string name="restore_error">You\'re selected an invalid backup file. Aborting</string>
    <string name="restore_notes">Restore Notes</string>
    <string name="restore_notes_summary">Restore notes from a backup file</string>
    <string name="restore_notes_question">Restore notes from selected file?</string>
    <string name="reverse_order">Reverse Order</string>
    <string name="save_text">Save as Text</string>
    <string name="save_text_message">The selected note is exported as %s</string>
    <string name="search_hint">Search…</string>
    <string name="security">Security</string>
    <string name="select_checklist">Select Checklist</string>
    <string name="select_note">Select Note</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_with">Share With</string>
    <string name="shared_by">Shared by sNotz %s</string>
    <string name="shared_by_message">Get sNotz %s, a simple, yet much useful application to manage notes, from PlayStore: https://play.google.com/store/apps/details?id=com.sunilpaulmathew.snotz</string>
    <string name="show_hidden_notes">Show Hidden Notes</string>
    <string name="show_hidden_notes_summary">Show notes that are set hidden from UI</string>
    <string name="single_click_note_message">Single click on a note to edit</string>
    <string name="skip">SKIP</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_date">Date Modified</string>
    <string name="source_code">Source Code</string>
    <string name="start">Start</string>
    <string name="support">Support</string>
    <string name="support_acknowledged">Donation Acknowledged \u2665</string>
    <string name="support_development">Support Development</string>
    <string name="support_development_summary">If you like to appreciate the efforts of the developer to provide this tool entirely free, please consider sending a small donation by clicking one among the below-provided options.</string>
    <string name="support_dinner">Buy me a Dinner</string>
    <string name="support_meal">Buy me a Meal</string>
    <string name="support_coffee">Buy me a Coffee</string>
    <string name="support_already_received_message">You\'re already supported the development with this item before.</string>
    <string name="support_received_message">Thank you very much for your support \u2665\nIt will motivate me a lot to continue my projects more active.</string>
    <string name="support_retry_message">Please try purchasing again</string>
    <string name="support_summary">Visit Telegram support group</string>
    <string name="text_empty">Text shouldn\'t be empty. Aborting</string>
    <string name="text_style">Text Style</string>
    <string name="text_style_bold">Bold</string>
    <string name="text_style_bold_italics">Bold &amp; Italics</string>
    <string name="text_style_italics">Italics</string>
</resources>