<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/AppTheme.Title"
                android:gravity="start" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:gravity="center" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/checklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    app:srcCompat="@drawable/ic_checklist"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:gravity="center" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_save"
                    android:background="@null"
                    android:visibility="gone"
                    android:gravity="center" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>

        <include layout="@layout/progress_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_checklist"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="84dp"
            android:scrollbars="vertical" >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_text_hint"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textColorHighlight="@color/color_red"
                android:cursorVisible="true"
                android:gravity="top|start"
                android:background="@null"
                android:padding="10dp" />
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/color_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="5dp" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="0dp" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:text="@string/note_color_background"
                android:background="@color/color_black"
                android:textStyle="italic|bold"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color_background"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_gravity="end|center"
                android:layout_margin="2dp"
                app:cardCornerRadius="5dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="0dp" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:text="@string/note_color_text"
                android:background="@color/color_black"
                android:textStyle="italic|bold"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_gravity="end|center"
                android:layout_margin="2dp"
                app:cardCornerRadius="5dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>